[package]
name = "nbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
compress = "0.2.1"
crossterm = "0.22.1"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
